# med-reason-evals

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  codecov.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
src/med_reason_evals/: __init__.py
src/med_reason_evals/data/: README.md  __init__.py  base.py  medbullets.py  medqa.py  metamedqa.py  pubmedqa.py
src/med_reason_evals/utils/: README.md  __init__.py  extraction.py  parsing.py  retry.py  text.py
src/med_reason_evals/verifiers/: README.md  __init__.py  answer_correctness_reward.py  base.py  medbullets.py  medqa.py  metamedqa.py  pubmedqa.py
src/med_reason_evals/verifiers/rewards/: README.md  __init__.py  hybrid_pubhealthbench.py  judge_rubric.py  llm_as_judge.py  multiple_choice_accuracy.py
src/med_reason_evals/verifiers/utils/: README.md  __init__.py  parsers.py  prompts.py
src/med_reason_evals/verl/: README.md  __init__.py  base.py  rollouts.py
src/med_reason_evals/verl/rewards/: README.md  __init__.py  healthbench_rubric.py  hybrid_pubhealthbench.py  llm_as_judge.py  multiple_choice_accuracy.py  semantic_equivalence.py
tests/: __init__.py  conftest.py  mock_openai_client.py  test_dotenv_loading.py
tests/data/: __init__.py  test_base.py
tests/utils/: __init__.py  test_extraction.py  test_parsing.py  test_retry.py  test_text.py
tests/verifiers/: __init__.py  conftest.py
tests/verifiers/rewards/: __init__.py  test_healthbench_rubric.py  test_hybrid_pubhealthbench.py  test_llm_as_judge.py  test_multiple_choice_accuracy.py
tests/verl/: __init__.py  conftest.py  test_base.py  test_rollouts.py
tests/verl/rewards/: __init__.py  test_healthbench_rubric.py  test_hybrid_pubhealthbench.py  test_llm_as_judge.py  test_multiple_choice_accuracy.py  test_semantic_equivalence.py
